[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
kafka = "0.10.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.32.0", features = ["full"] }
async-graphql = "6.0.6"
async-graphql-axum = "6.0.6"
axum = "0.6.20"
dotenv = "0.15.0"
