[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0.7"
tower = { version = "0.4.13", features = ["limit"] }
tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
anyhow = "1.0.71"
futures = "0.3.28"
dotenv = "0.15.0"
kafka = "0.10.0"
opentelemetry = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26.0" }
opentelemetry-semantic-conventions = "0.26.0"
clap = { version = "4.0", features = ["derive"] }
